<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Backchat</string>
    <string name="new_gab_title">New Message</string>
    <string name="version_string">Version %s</string>
    <string name="gab_detail_tag">Tag</string>
    <string name="gab_detail_clue">Clues</string>
    <string name="send_button_text">Send</string>
    <string name="gab_detail_hint_send">Write a message</string>
    <string name="tag_dialog_title">Tag</string>
    <string name="tag_dialog_body">Tag this conversation</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="login_facebook_button">Sign in with Facebook</string>
    <string name="login_gpp_button">Sign in with Google+</string>
    <string name="new_message_title">New Message</string>
    <string name="invite_contacts_title">Invite contacts</string>
    <string name="invite_contacts_contextual_invite">Invite</string>
    <string name="invite_compose_title">Compose message</string>
    <string name="invite_compose_anon_text">Someone you know wants you to try Backchat! Anonymously message your friends.</string>
    <string name="invite_compose_nonanon_text">Your friend %s wants you to try Backchat! Anonymously message your friends.</string>
    <string name="invite_contacts_select_all">Select all</string>
    <string name="invite_compose_to_header">To</string>
    <string name="invite_compose_toggle_anonymous">Send anonymously</string>
    <string name="invite_compose_sending_invite_dialog_title">Sending invites</string>
    <string name="invite_compose_sending_invite_dialog_body">Please wait</string>
    <string name="invite_success_body">Your invites were successfully sent.</string>
    <string name="invite_failure_dialog_retry_title">Your invites were not sent.</string>
    <string name="invite_failure_dialog_retry_body">Sorry, something went wrong. Retry?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="gab_clues_get_more">Get clues</string>
    <string name="gab_clue_status_text">You have %d remaining clues</string>
    <string name="no_google_play_title">Google Play is not available</string>
    <string name="no_google_play_text">Backchat requires Google Play. Please install.</string>
    <string name="ok_button">OK</string>
    <string name="facebook_app_id">122753474571987</string>
    <string name="login_failure_dialog_title">Login failed</string>
    <string name="login_failure_dialog_text">Sorry, something went wrong. Please try again.</string>
    <string name="login_success">Welcome to Backchat</string>
    <string name="share_tile_title">Share</string>
    <string name="share_tile_subtitle">Get more friends by sharing</string>
    <string name="clues_tile_title">Get clues</string>
    <string name="clues_tile_subtitle">Buy more clues</string>
    <string name="invite_tile_title">Invite</string>
    <string name="invite_tile_subtitle">Invite your friends to Backchat</string>
    <string name="more_friends_tile_title">Show all friends</string>
    <string name="fb_share_app_name">Backchat</string>
    <string name="fb_share_app_caption">Send and receive anonymous messages</string>
    <string name="fb_share_app_description">Backchat is a new application for iOS that allows sending and receiving anonymous text and photo messages.</string>
    <string name="share_app_link">https://itun.es/us/Y_GvN.i</string>
    <string name="fb_share_app_picture">https://s3.amazonaws.com/backdoor_images/icon_114x114.png</string>
    <string name="gpp_share_text">Message me anything you want anonymously with Backchat. Backchat Me!</string>
    <string name="abuse_dialog_title">Report abuse</string>
    <string name="abuse_dialog_text">Please describe as fully as possible the situation so we can address the issue</string>
    <string name="abuse_dialog_info_hint">Type here</string>
    <string name="abuse_dialg_report_button">Report</string>
    <string name="notification_settings_dialog_summary_text">Show message content in notifications</string>
    <string name="notification_settings_dialog_title">Configure notification settings</string>
    <string name="notification_settings_dialog_vibrate_text">Vibrate when a message arrives</string>
    <string name="notification_settings_dialog_sound_text">Play a sound when a message arrives</string>
    <string name="gab_deleted_toast">Conversation deleted</string>
    <string name="gab_pick_image_description">Select or take a new Picture</string>
    <string name="clue_translated_like">Likes</string>
    <string name="clue_translated_work">Work</string>
    <string name="clue_translated_gender">Gender</string>
    <string name="clue_translated_location">Lives in</string>
    <string name="clue_translated_school">School</string>
    <string name="gab_clue_updating_remaining">Updating&#8230;</string>
    <string name="clue_information_dialog_title">Clue details</string>
    <string name="privacy_dialog_title">Privacy and Legal</string>
    <string name="about_us_dialog_title">About us</string>
    <string name="login_dialog_title">Logging in&#8230;</string>

    <string name="tour_page_1_title">Welcome to Backchat</string>
    <string name="tour_page_1_text">Backchat is half anonymous text messaging with your friends.</string>
    <string name="tour_page_1_line_1">Jas, when are you going to tell Katie you like her?</string>
    <string name="tour_page_1_line_2">I don\'t, why would you think that?</string>
    <string name="tour_page_1_line_3">You are always staring at her 3rd period</string>
    <string name="tour_page_1_line_4">Who is this? Brian?</string>
    <string name="tour_page_2_title">Clues</string>
    <string name="tour_page_2_text">Use clues to help find out who is anonymously texting you.</string>
    <string name="tour_page_2_note">Note: Clues never reveal your identity, though they may narrow down a user\'s scope of who\'s talking to them.</string>
    <string name="tour_page_2_line_1">You know Katie has a crush on you she always stares at you.</string>
    <string name="tour_page_2_line_2">What who are you? No way!</string>
    <string name="tour_page_2_clue_1">Male</string>
    <string name="tour_page_2_clue_2">San Franscisco</string>
    <string name="tour_page_2_clue_3">Harvard-Westlake</string>
    <string name="tour_page_3_title">Get Started</string>
    <string name="tour_page_3_text">Let your friends know you\'re on Backchat to receive anonymous texts from those you know. In addition, you start with an additional 9 clues for your post.</string>
    <string name="tour_page_3_share_fb">Share on Facebook</string>
    <string name="tour_page_3_share_gpp">Share on Google Plus</string>
    <string name="tour_button_cancel">No, thanks</string>
    <string name="need_more_clues_dialog_title">Sorry</string>
    <string name="need_more_clues_dialog_text">You\'ve run out of clues. Buy more?</string>
            
    <string name="no_friends_text">Sorry, you have no friends yet.</string>
</resources>