<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background_color" 
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/tour_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tour_page_1_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/tour_page_2_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        
                <RadioButton
            android:id="@+id/tour_page_3_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RadioGroup>

    <ViewFlipper android:id="@+id/tour_flipper" 
            android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <LinearLayout
            android:id="@+id/tour_page_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="187dp"
                android:layout_height="144dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/login_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/tour_page_1_title"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/tour_page_1_text"
                android:textColor="#FFFFFF"
                android:textSize="15sp" 
                android:paddingBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" 
                android:background="@color/dark_green_background_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/black_bubble_to"
                    android:text="@string/tour_page_1_line_1"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/green_bubble"
                    android:text="@string/tour_page_1_line_2"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/black_bubble_to"
                    android:text="@string/tour_page_1_line_3"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/green_bubble"
                    android:text="@string/tour_page_1_line_4"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tour_page_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/tour_page_2_title"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/tour_page_2_text"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:columnCount="3"
                android:padding="20dp"
                android:rowCount="2" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/clue_male" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/tour_page_2_clue_1"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/clue_city" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/tour_page_2_clue_2"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/clue_school" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/tour_page_2_clue_3"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/clue_question_mark" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/clue_question_mark" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/clue_question_mark" />
            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" 
                android:paddingTop="10dp"
                android:background="@color/dark_green_background_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/black_bubble_to"
                    android:text="@string/tour_page_2_line_1"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/green_bubble"
                    android:text="@string/tour_page_2_line_2"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/tour_page_2_note"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tour_page_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/tour_page_3_title"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/tour_page_3_text"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/tour_3_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/tour_button_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_white_corners_selector"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/tour_button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_black_corners_selector"
                    android:text="@string/tour_button_cancel" />
            </LinearLayout>
        </LinearLayout>
    </ViewFlipper>

</LinearLayout>